# ghost

./: README.md
UI/: 註冊.html
backend/: .gitignore  manage.py  pyproject.toml  requirements.txt
backend/accounts/: admin.py  auth.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_users_role.py  0003_alter_users_created_at.py  0004_users_email.py  0005_alter_users_account.py  0006_alter_users_email.py  0007_alter_users_options_alter_users_account_and_more.py
backend/common/services/: geocode.py
backend/events/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/events/migrations/: 0001_initial.py  0002_activity_form_address.py  0003_geocheckpoint_stage_questionstage_userprogress_and_more.py  0004_remove_stage_checkpoint_and_more.py  0005_geocheckpoint_userprogress.py  0006_activity_form_isactive_activity_form_lottery_done_at_and_more.py  0006_userprogress_lottery_times.py
backend/ghostmove/: asgi.py  settings.py  urls.py  wsgi.py
backend/lottery/: admin.py  models.py  serializers.py  urls.py  views.py
backend/lottery/migrations/: 0001_initial.py  0002_lotteryentry_prize.py  0003_lotteryentry_times.py  0004_lotteryentry_is_joined.py
backend/records/: admin.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/records/migrations/: 0001_initial.py  0002_alter_event_record_event_image.py  0003_event_record_descriptions.py  0004_alter_event_record_event_image.py  (+1 more)
backend/services/: lottery.py
(+36 files in other folders)
